erDiagram
    FACEBOOKPOST {
        string id PK
        string post_id
        string page_name
        string content
        datetime timestamp
    }
    POSTCOMMENT {
        string id PK
        string post_id FK
        string comment_id
        string author_name
    }
    POSTIMAGE {
        string id PK
        string post_id FK
        string image_url
    }
    ANALYSISRESULT {
        string id PK
        string post_id FK
        string analysis_type
    }
    FACEBOOKPOST ||--o{ POSTCOMMENT : "1:N"
    FACEBOOKPOST ||--o{ POSTIMAGE : "1:N"
    FACEBOOKPOST ||--o{ ANALYSISRESULT : "1:N"
